Add ClickHouse connector support via add-spark-connector skill
Seventh connector onboarded. Originally scoped as BigQuery; redirected
to ClickHouse at Phase 0 before any code was written, since BigQuery has
no local/offline testing mode (real GCP project/billing/credentials
required, unavailable here), while ClickHouse is genuinely testable
without a cloud account via a real standalone server binary.

- com.clickhouse.spark %% clickhouse-spark-runtime-3.5 % 0.10.0 added as
  a test-scope dependency, Linux/macOS-only (Windows excluded, both the
  dependency and the test class, matching the Iceberg JDK<17 pattern).
- ClickHouseTestServer: a new test-infrastructure mechanism launching a
  real standalone `clickhouse` server binary as a subprocess instead of
  Docker/testcontainers (Docker's daemon could not be started in this
  sandbox).
- A reflective jar scan found zero Command-shaped classes in
  clickhouse-spark-runtime; the entire operation surface routes through
  Spark's own generic DSv2 commands, already recognized from Iceberg's
  pass.
- One genuinely new, connector-agnostic WriteCommandSupport case:
  DeleteFromTable, since ClickHouse implements plain SupportsDelete
  rather than SupportsRowLevelOperations - confirmed empirically that a
  real predicate-based DELETE FROM ... WHERE ... executes successfully,
  a shape no prior connector's pass had recognized.
- Also fixed, general beyond ClickHouse: a real JDK 21/Arrow 12.0.1
  incompatibility (apache/arrow#35053) via a test-scope-only Arrow
  dependency override.
- Found and documented (not fixed, as genuinely connector-specific and
  orthogonal to Invariant): a real read/write location-format asymmetry,
  and ClickHouse's own ORDER BY/sorting-key nullability constraint.
- Unlike every prior connector's pass, this one closes with real,
  honestly-recorded not-investigated rows on both coverage ledgers -
  ClickHouse's operation and feature surfaces are substantially larger
  than any connector onboarded so f