@@ -2986,6 +2986,197 @@ gap), documented with a clear next step and a permanent test pinning the
 current behavior, rather than silently worked around or silently passed
 over. `AvroConnectorSpec`: 23 tests, all passing.
 
+## ClickHouse support
+
+Seventh connector onboarded via the `add-spark-connector` skill's process.
+Originally scoped as BigQuery; scoped out at Phase 0 before any code was
+written because, unlike every connector this repo has onboarded so far,
+BigQuery has no local/offline testing mode — it requires a real GCP
+project, billing, and credentials, conflicting with this repo's "real
+Spark execution, no mocking" testing philosophy (ARCHITECTURE.md's
+ADR-005) and unavailable in the onboarding session. ClickHouse was chosen
+as a substitute specifically because it *is* genuinely testable without
+a cloud account: `com.clickhouse.spark %% clickhouse-spark-runtime-3.5 %
+0.10.0` (confirmed the latest release on Maven Central for exactly this
+Spark 3.5/Scala 2.12 combination at onboarding time; no known blocking
+compatibility issue against it), added to `spark-adapter/build.sbt` as a
+`% "test"` dependency, Linux/macOS-only (excluded on Windows — see below).
+
+**A genuinely new kind of test dependency: a real, separate server
+process, not just a session extension or embedded metastore.**
+`ClickHouseTestServer` (test sources) launches a real, standalone
+`clickhouse` binary as a subprocess — downloaded once from ClickHouse's
+own GitHub releases and cached locally, started with a per-test
+HTTP/TCP port pair, and torn down in `afterAll`. Confirmed directly
+during Phase 0 investigation (before any test code existed): a real
+`clickhouse server` process starts, binds, and answers real
+`CREATE TABLE`/`INSERT`/`SELECT` queries over HTTP with zero Docker
+dependency. This was a deliberate choice over testcontainers/Docker
+(the connector's own upstream test suite uses this) — Docker's daemon
+could not be started in the onboarding session (`ulimit: error setting
+limit (Operation not permitted)`, a hard container restriction), so any
+testcontainers-based test could only ever be *hoped* to pass in CI, never
+actually run and confirmed by the person adding it. **Windows scope**:
+ClickHouse has no supported native Windows server build (a hard platform
+constraint, unlike Iceberg's JDK-version-only exclusion) —
+`ClickHouseTestServer`/`ClickHouseConnectorSpec.scala` and the
+`clickhouse-spark-runtime` dependency itself are excluded on Windows in
+`build.sbt`, the same "exclude the dependency, not just the test class"
+pattern Iceberg's JDK<17 exclusion already established (Spark's
+ServiceLoader-based `DataSourceRegister` lookup scans every provider on
+the classpath for *any* format-based read, so a merely-resolvable jar can
+affect unrelated tests). **A real environment-specific caveat, stated
+plainly rather than left implicit**: macOS provisioning
+(`clickhouse-macos`/`clickhouse-macos-aarch64` release assets) is
+implemented and the download URLs confirmed to exist via a direct HTTP
+check, but **not independently runtime-verified by this session** — no
+macOS environment was available to actually start and query a server
+there. Linux (the platform this session ran on) is fully verified: real
+queries against a real started server, both during investigation and via
+`ClickHouseConnectorSpec` itself.
+
+**A second real environment-specific fix, general beyond ClickHouse**:
+a real `UnsupportedOperationException: sun.misc.Unsafe or
+java.nio.DirectByteBuffer.<init>(long, int) not available` surfaced the
+first time any ClickHouse write executed under this sandbox's JDK 21 —
+confirmed to be a genuine external incompatibility (apache/arrow#35053,
+fixed in Arrow 13.0.0): JDK 21 changed `DirectByteBuffer`'s private
+constructor signature, and Spark 3.5.1 bundles Arrow 12.0.1 (confirmed
+via the resolved test classpath), which predates the fix. ClickHouse's
+`.writeTo(...)` path is the first connector in this module to actually
+exercise Arrow-based serialization (its own bulk-load mechanism — Delta/
+Iceberg's `.writeTo()` tests never hit this). Not fixable via
+`--add-opens` (both `java.base/java.nio` and `jdk.unsupported/sun.misc`
+were already open in this module's `Test/javaOptions`; the failure is a
+missing constructor overload, not a reflective-access denial). Fixed via
+a `dependencyOverrides` entry pinning `arrow-vector`/`arrow-memory-core`/
+`arrow-memory-netty` to 14.0.1 for the *test* classpath only — confirmed
+compatible with every other spec exercising Arrow-adjacent code paths in
+this suite, and with zero effect on the shipped `spark-adapter` jar
+(Arrow is never a compile/runtime dependency of this module, only pulled
+in transitively by Spark's own `provided`/test dependencies).
+
+**A real reflective jar scan of `clickhouse-spark-runtime` (6,181
+classes) found zero `Command`-shaped classes** — the second connector
+(after Avro) with no SQL-extension commands at all. The entire operation
+surface routes through Spark's own generic DSv2 command family:
+`AppendData`/`OverwriteByExpression`/`CreateTableAsSelect`/
+`ReplaceTableAsSelect` were already generic (from Iceberg's pass) and are
+confirmed here to cover ClickHouse "for free," including the same
+nested-double-write `StagedTable` pattern Delta/Iceberg's own new-table
+creates already handle. `CreateNamespace`/`CreateTable`(plain)/
+`AnalyzeTable`/`ShowTables` were already safe-listed generically — zero
+new `FailClosedCommands` entries needed.
+
+**One genuinely new, connector-agnostic `WriteCommandSupport` case:
+`DeleteFromTable`.** Confirmed empirically that a real predicate-based
+`DELETE FROM ch.db.tbl WHERE id = 1` executes successfully against
+ClickHouse — unlike Parquet/CSV/Avro's plain tables (which reject DELETE
+outright) and structurally different from Iceberg's row-level DML
+(`RowLevelWrite`/`ReplaceData`/`WriteDelta`, produced by Spark's
+`RewriteRowLevelOperation` optimizer rule for connectors implementing
+`SupportsRowLevelOperations`). ClickHouse's connector doesn't implement
+that interface — it implements plain `SupportsDelete` instead, so the
+`DeleteFromTable` node is never rewritten and reaches
+`ContractEnforcementRule` as-is, a shape no prior connector's pass had
+ever seen translated. `DeleteFromTable.table` is a plain `LogicalPlan`
+(possibly `SubqueryAlias`-wrapped), not a `NamedRelation` directly, so
+the new case locates the underlying relation via `collectFirst` rather
+than the `namedRelationLocationAndFormat` helper's direct-parameter form.
+Scope matches Delta/Iceberg's row-level DML precedent exactly:
+structural only (target location/schema) — the delete predicate itself
+has no IR representation and isn't checked.
+
+**A real, found-but-deliberately-undebugged finding on `MERGE INTO`**:
+confirmed empirically that a `MERGE INTO` statement against ClickHouse
+fails with `AnalysisException: [UNRESOLVED_COLUMN.WITH_SUGGESTION]`
+*before* ever producing a `Command`-shaped analyzable plan at all — a
+genuine analysis-time rejection, consistent with the connector's own
+documentation stating DML beyond append/overwrite isn't supported. Not
+investigated further to find the exact root cause (unlike `UPDATE`,
+which cleanly reaches `UpdateTable` and is then rejected by Spark's own
+generic "not supported temporarily" message) — the practical conclusion
+(MERGE never produces a translatable plan for this connector) is the
+same regardless, and chasing the precise resolver internals was judged
+out of scope for this pass.
+
+**A real, confirmed read/write location-format asymmetry**, general to
+how `Table.properties()` behaves for this connector, not a bug in
+Invariant's own logic: writes resolve to a computed 3-part qualified
+identifier (`catalog.namespace.table`, e.g. `ch.probe_db.t`) via
+`WriteCommandSupport`'s existing `qualifiedIdentifier` helper, since
+`ClickHouseTable` exposes no `"location"` property either side. Reads go
+through `DataSourceV2Relation.name` (`ClickHouseTable`'s own `name()`
+implementation), confirmed empirically to return a backtick-quoted
+**2-part** `` `namespace`.`table` `` with no catalog prefix at all —
+genuinely different from the write side's convention for the identical
+table. A contract's declared `location` for a ClickHouse *input* must
+therefore use this quoted 2-part form (` "`probe_db`.`read_catalog_tbl`"
+`), not the 3-part form outputs use — confirmed and exercised directly in
+`ClickHouseConnectorSpec`'s read test. **Next step, not attempted this
+pass**: a possible future unification (making the read side also prefer
+a computed qualified identifier over raw `Table.name()`, matching the
+write side's convention) — a connector-agnostic change affecting every
+DSv2 connector's read-side location resolution, judged too large a scope
+change for this pass given it works correctly today, just with a
+real quirk contract authors need to know about.
+
+**Feature surface**: ClickHouse's own `ORDER BY`/sorting-key nullability
+constraint (`allow_nullable_key`) confirmed genuinely orthogonal to
+Invariant — a source DataFrame column can correctly report
+`nullable = false` while `DataFrameWriterV2`'s `.create()` path still
+doesn't propagate that into the generated ClickHouse DDL, so ClickHouse
+itself rejects a nullable-typed sorting key regardless of what a
+contract declares or what Invariant's own structural checks see — the
+same "confirmed orthogonal" pattern as Delta's `CHECK` constraints.
+Invariant neither causes nor can prevent this; a satisfying write (with
+`settings.allow_nullable_key=1` supplied) is unaffected either way,
+confirmed by every other `.create()`/`.createOrReplace()` test in this
+file succeeding once that workaround is applied.
+
+### ClickHouse operation-surface coverage ledger
+
+| Operation | Status | Evidence / next step |
+|---|---|---|
+| `.read.format("clickhouse").load(...)` (TableProvider, no catalog) | ✅ Covered | `DataSourceV2Relation`, same generic case as catalog reads. `ClickHouseConnectorSpec`'s "PASS: TableProvider format-based read/write round-trips real data." |
+| Catalog table reference (`spark.table(...)`/`SELECT * FROM t`) | ✅ Covered | `DataSourceV2Relation`, already generic from Iceberg's pass. `ClickHouseConnectorSpec`'s PASS read test — with the read/write location-format asymmetry above confirmed and worked around. |
+| Time travel / snapshot reads | 🚫 **N/A, not a real gap** | ClickHouse's MergeTree engine has no Iceberg/Delta-style snapshot-versioning concept exposed through this connector. Nothing to translate. |
+| Streaming read (`readStream`) | ❓ **Not investigated** | Out of scope for this pass (streaming *write* was investigated and found rejected — see below; the read side was not separately probed). **Next step**: probe `spark.readStream.format("clickhouse")...` against a real server the same way the write side was. |
+| Change-data-feed / incremental read | 🚫 **N/A, not a real gap** | No CDC mechanism exists for this connector's plain MergeTree tables. Nothing to translate. |
+| `.save(path)` (path-based, no catalog) | 🚫 **N/A — connector has no path-based write at all** | Confirmed via this connector's own documentation and empirically: writes are either catalog-based (`.writeTo(...)`) or `TableProvider`-based with explicit `host`/`database`/`table` options, never a bare filesystem path. Not a gap — there is no `.save(path)` shape this connector produces. |
+| `.saveAsTable(...)`, new table | ✅ Covered | Same `ReplaceTableAsSelect` shape `.writeTo(...).createOrReplace()` uses, confirmed via probe (not exercised as a dedicated permanent test — `ClickHouseConnectorSpec`'s `createOrReplace()` test covers the identical plan shape). |
+| `.saveAsTable(...)`, existing table (append) | ❓ **Not investigated** | Out of scope for this pass — `.insertInto(...)` and `.writeTo(...).append()` (the same `AppendData` shape) were both confirmed instead. **Next step**: a dedicated probe/test, cheap to add given the shape is already known to be covered. |
+| `.insertInto(...)` | ✅ Covered | `AppendData`, already generic. `ClickHouseConnectorSpec`'s translation test. |
+| `.writeTo(...)`, all sub-ops (`.append()`/`.overwrite(cond)`/`.create()`/`.createOrReplace()`) | ✅ Covered | `AppendData`/`OverwriteByExpression`/`CreateTableAsSelect`/`ReplaceTableAsSelect`, all already generic from Iceberg's pass, confirmed to cover ClickHouse via real PASS/FAIL pairs (`.overwritePartitions()`, DataFrameWriterV2's dynamic-partition-overwrite sub-op, not investigated — see next row). |
+| `.writeTo(...).overwritePartitions()` | 🚫 **N/A — connector doesn't support partition-level overwrite** | Confirmed via this connector's own documented caveat ("The connector doesn't currently support partition-level overwrite operations"), not independently re-probed this pass. **Next step**: a real probe to confirm the exact rejection mode (Spark-level or connector-level), if ever doubted. |
+| Format-specific DML — `DELETE FROM ... WHERE ...` | ✅ **Covered — closed this pass, genuinely new** | `DeleteFromTable`, a new connector-agnostic `WriteCommandSupport` case (see above). PASS/FAIL pair in `ClickHouseConnectorSpec`, structural verification only. |
+| Format-specific DML — `UPDATE`/`MERGE INTO` | 🚫 **N/A — rejected before any write occurs** | `UPDATE` reaches `UpdateTable` then is rejected by Spark's own generic "not supported temporarily" message; `MERGE` fails at analysis time before any Command-shaped plan exists at all. Neither is a real Phase-4 case-3 (data-mutating, unmodeled) operation for this connector — both are N/A the same way Parquet/CSV/Avro's own DML rejections are. `ClickHouseConnectorSpec`'s combined rejection test, asserting the target table is unchanged. |
+| Streaming write | 🚫 **N/A — connector doesn't implement `SupportsStreamingWrite`** | Confirmed empirically: `AnalysisException: Table ... doesn't support streaming write - ClickHouseTable(...)`, rejected by Spark itself before any Command-shaped write plan is produced. `ClickHouseConnectorSpec`'s dedicated rejection test. **Next step**: none — this is a genuine, permanent connector limitation as of 0.10.0, not something Invariant's translation could close even in principle without the connector itself adding the capability. |
+| Maintenance operations that touch data | ❓ **Not investigated** | ClickHouse has server-side maintenance operations (`OPTIMIZE`, `ALTER TABLE ... DELETE`, TTL-driven expiry, etc.) reachable via raw SQL against the server directly, but whether any of these route through a Spark-visible `Command`-shaped plan at all (as opposed to being entirely outside Spark's plan machinery) was not investigated this pass. **Next step**: a real probe issuing `OPTIMIZE`/raw-SQL maintenance statements through this connector's SQL passthrough (if one exists) against a real server. |
+
+### ClickHouse feature-surface coverage ledger
+
+| Feature | Status | Evidence / next step |
+|---|---|---|
+| `ORDER BY`/sorting-key nullability (`allow_nullable_key`) | ✅ Confirmed orthogonal | A source DataFrame's correct `nullable = false` isn't propagated into the generated DDL by `DataFrameWriterV2.create()`; ClickHouse enforces its own constraint independently of Invariant either way. `ClickHouseConnectorSpec`'s dedicated feature-surface test. |
+| Read/write location-format asymmetry (`Table.properties()`/`Table.name()`) | ✅ Confirmed and worked around | Not a "feature" in the schema-evolution sense, but a real, confirmed connector-specific behavior contract authors must account for. See the write-up above; exercised directly in the read test. |
+| Compression/codec options, TTL, `PARTITION BY`, replicated engines, materialized views | ❓ **Not investigated** | Out of scope for this pass — this connector has a substantially larger feature surface than any prior one (ClickHouse's own engine/storage model is far more configurable than Parquet/Avro/Delta's). **Next step**: a dedicated future pass investigating each, the same "real probe against a real table with the feature on" methodology this document already establishes. |
+| Logical/physical type mapping (ClickHouse's `LowCardinality`, `Array`, `Map`, `Tuple`, `Nested` types) | ❓ **Not investigated** | Out of scope for this pass — every test here used only `BIGINT` columns. **Next step**: real round-trip tests for ClickHouse's richer type system, the same way Avro's decimal/date/timestamp pass worked. |
+
+Net assessment: unlike every prior connector's pass, this one has real
+❓ rows — ClickHouse's operation and feature surfaces are both
+substantially larger than any connector onboarded so far (a real second
+network service with its own SQL dialect, storage engines, and type
+system, not a file format or an embedded-metastore catalog), and a
+single pass's scope was deliberately kept to what could be empirically
+confirmed given the added complexity of provisioning a real server
+without Docker. What *is* closed: the entire core write path
+(`AppendData`/`OverwriteByExpression`/`CreateTableAsSelect`/
+`ReplaceTableAsSelect`/the new `DeleteFromTable` case), the core read
+path, and the connector's DML/streaming-write limits — all confirmed
+empirically, none assumed. `ClickHouseConnectorSpec`: 15 tests, all
+passing.
+
 ---
 
 **Last Updated:** 2026-08-27
